--- a/checkabletextview/build.gradle
+++ b/checkabletextview/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.JDevZone'
 
 android {
     compileSdkVersion 29
