--- a/checkabletextview/build.gradle
+++ b/checkabletextview/build.gradle
@@ -6,12 +6,12 @@ apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.JDevZone'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
 
 
     defaultConfig {
         minSdkVersion 17
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
@@ -29,11 +29,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation "androidx.core:core-ktx:1.0.2"
-    implementation 'androidx.vectordrawable:vectordrawable:1.1.0-rc01'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation "androidx.core:core-ktx:1.3.2"
+    implementation 'androidx.vectordrawable:vectordrawable:1.2.0-alpha02'
 
 }
 repositories {
